# Image-Processor

./: CMakeLists.txt  README.md  bmp_image.cpp  bmp_image.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filter_father.cpp  filter_father.h  first_try_my_filter_relief.cpp  first_try_my_filter_relief.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  image_processor.cpp  image_processor.h  my_filter_salt_and_pepper.cpp  my_filter_salt_and_pepper.h  negative_filter.cpp  negative_filter.h  parser.cpp  parser.h  sharpening_filter.cpp  sharpening_filter.h  test.cpp
